[gd_scene load_steps=18 format=3 uid="uid://1tpqh8qb7k42"]

[ext_resource type="PackedScene" uid="uid://ckkwsspou0y1c" path="res://scenes/2d/MapGenerator.tscn" id="1_glv2v"]
[ext_resource type="Script" uid="uid://csvba4justjcj" path="res://scripts/2d/Main.gd" id="1_main"]
[ext_resource type="Shader" uid="uid://b4r6nxw850pm1" path="res://shaders/painterly_effect.gdshader" id="4_f0bfo"]
[ext_resource type="Shader" uid="uid://cble155gkncbt" path="res://shaders/gaussian_blur.gdshader" id="5_2dj7u"]
[ext_resource type="Shader" uid="uid://bvjyqap5w41co" path="res://shaders/edge_fade.gdshader" id="5_voiwj"]
[ext_resource type="Shader" uid="uid://c5xfrccv38m8m" path="res://shaders/corner_radial_fade.gdshader" id="6_2dj7u"]
[ext_resource type="Shader" uid="uid://dxnnrrvo4hvd1" path="res://shaders/painterly_v2_watercolor.gdshader" id="7_p3fih"]
[ext_resource type="PackedScene" uid="uid://b6w065e18g03u" path="res://scenes/2d/MainMenu.tscn" id="8_kpsef"]
[ext_resource type="PackedScene" uid="uid://bjjpm0xn570qo" path="res://scenes/2d/PartySelectMenu.tscn" id="9_mifn2"]
[ext_resource type="Script" uid="uid://coclurbvq0203" path="res://scripts/2d/UIController.gd" id="10_uicontroller"]
[ext_resource type="PackedScene" uid="uid://73neomc4wcah" path="res://scenes/2d/EventWindow.tscn" id="11_niih8"]
[ext_resource type="PackedScene" uid="uid://bdgphw4taxtfq" path="res://scenes/2d/RestController.tscn" id="12_7iead"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_voiwj"]
shader = ExtResource("4_f0bfo")
shader_parameter/edge_distortion = 0.0
shader_parameter/color_variation = 0.015
shader_parameter/texture_overlay_strength = 0.013
shader_parameter/texture_scale = 6.466

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mifn2"]
shader = ExtResource("7_p3fih")
shader_parameter/bleed_amount = 0.01
shader_parameter/edge_darken = 0.05
shader_parameter/color_variation = 0.015
shader_parameter/paper_texture = 0.015

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2dj7u"]
shader = ExtResource("5_voiwj")
shader_parameter/fade_distance = 12.0
shader_parameter/edge_color = Color(0.611765, 0.317647, 0.152941, 0.619608)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p3fih"]
shader = ExtResource("6_2dj7u")
shader_parameter/corner_fade_distance = 80.0
shader_parameter/corner_color = Color(0.611765, 0.317647, 0.152941, 0.584314)
shader_parameter/corner_intensity = 0.6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kpsef"]
shader = ExtResource("5_2dj7u")
shader_parameter/blur_radius = 16
shader_parameter/blur_strength = 10.0
shader_parameter/blur_opacity = 0.25

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="MapGenerator" parent="." instance=ExtResource("1_glv2v")]
layout_mode = 1
node_count = 256
map_size = Vector2(1280, 720)
poisson_min_distance = 30.0
shape_noise_enabled = false
line_width = 2.0
line_color = Color(0.580392, 0.47451, 0.294118, 0.752941)
node_base_color = Color(0.461684, 0.368652, 0.233192, 1)
coast_line_color = Color(0.588235, 0.482353, 0.298039, 1)
coast_line_width = 6.0
horizontal_line_width_multiplier = 1.8
preview_path_dot_size = 3.0
landmass_base_color = Color(0.784914, 0.664423, 0.499082, 1)
landmass_gradient_distance = 50.0
party_travel_speed = 50.0

[node name="GameUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("10_uicontroller")

[node name="ViewportFX" type="Control" parent="GameUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PainterlyEffect" type="CanvasLayer" parent="GameUI/ViewportFX"]

[node name="ColorRect" type="ColorRect" parent="GameUI/ViewportFX/PainterlyEffect"]
z_index = 99
material = SubResource("ShaderMaterial_voiwj")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PainterlyEffect2" type="CanvasLayer" parent="GameUI/ViewportFX"]

[node name="ColorRect" type="ColorRect" parent="GameUI/ViewportFX/PainterlyEffect2"]
z_index = 99
material = SubResource("ShaderMaterial_mifn2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="EdgeReddeningEffect" type="CanvasLayer" parent="GameUI/ViewportFX"]

[node name="ColorRect" type="ColorRect" parent="GameUI/ViewportFX/EdgeReddeningEffect"]
z_index = 99
material = SubResource("ShaderMaterial_2dj7u")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RadialReddeningEffect" type="CanvasLayer" parent="GameUI/ViewportFX"]

[node name="ColorRect" type="ColorRect" parent="GameUI/ViewportFX/RadialReddeningEffect"]
z_index = 99
material = SubResource("ShaderMaterial_p3fih")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BlurEffect" type="CanvasLayer" parent="GameUI/ViewportFX"]
visible = false

[node name="ColorRect" type="ColorRect" parent="GameUI/ViewportFX/BlurEffect"]
z_index = 99
material = SubResource("ShaderMaterial_kpsef")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MainMenu" parent="." instance=ExtResource("8_kpsef")]
visible = false
layout_mode = 1

[node name="PartySelectMenu" parent="." instance=ExtResource("9_mifn2")]
visible = false
layout_mode = 1

[node name="EventWindow" parent="." instance=ExtResource("11_niih8")]
visible = false
z_index = 1000
layout_mode = 1

[node name="RestController" parent="." instance=ExtResource("12_7iead")]
visible = false
layout_mode = 1
mouse_filter = 2
